--- a/package.json
+++ b/package.json
@@ -276,7 +276,8 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "react-tooltip": "^3.11.1"
   },
   "devEngines": {
     "node": ">=7.x",
